<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_remote_global">

    <fragment
        android:id="@+id/nav_remote_global"
        android:name="com.woowrale.openlibrary.ui.global.remote.GlobalRemoteFragment"
        android:label="@string/menu_remote_global"
        tools:layout="@layout/fragment_global_remote" />

    <fragment
        android:id="@+id/nav_details"
        android:name="com.woowrale.openlibrary.ui.details.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/nav_local_global"
        android:name="com.woowrale.openlibrary.ui.global.remote.GlobalRemoteFragment"
        android:label="@string/menu_local_global"
        tools:layout="@layout/fragment_global_remote" />
</navigation>