<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_12"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/dimen_70"
                android:layout_height="@dimen/dimen_70"
                android:contentDescription="@string/book_image"
                android:src="@drawable/ic_open_library_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/book_title"
                    android:textColor="@color/book_title"
                    android:textSize="@dimen/dimen_text_15" />

                <TextView
                    android:id="@+id/olid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_url"
                    android:textColor="@color/book_url"
                    android:textSize="@dimen/dimen_text_12" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
